--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ run_tests:
     before_script:
         - pip install -r requirements.txt
     script:
-        - test.py
+        - python3 test.py
 
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # Runs if *both* previous jobs complete successfully.
